REFT-45 updated authentication

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,6 +21,15 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/(models)/User.js",
+    "app/api/auth/[...nextauth]/options.js",
+    "app/api/auth/[...nextauth]/route.js",
+    "app/api/Users/route.js"
+  ],
   "exclude": ["node_modules"]
 }
