--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.1",
     "next": "^14.1.1",
     "next-auth": "^4.24.7",
     "react": "^18",
