--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.3",
     "next": "^14.1.1",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18"
   },
