--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,7 +27,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/(models)/User.ts",
-    "app/api/auth/[...nextauth].ts",
+    "app/api/auth/[...nextauth]/[...nextauth].ts",
     "app/api/auth/[...nextauth]/route.ts",
     "app/api/Users/route.ts"
   ],
