REFT-141 messing around with images

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "uuid": "^9.0.1",
     "viem": "^2.9.9",
     "wagmi": "^2.5.18"
   },
@@ -32,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
