--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,12 @@
     "@prisma/client": "^5.11.0",
     "@rainbow-me/rainbowkit": "^2.0.5",
     "@tanstack/react-query": "^5.28.14",
+    "@types/formidable": "^3.4.5",
     "bcrypt": "^5.1.1",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.3",
+    "formidable": "^3.5.1",
+    "fs-extra": "^11.2.0",
     "mongodb": "^6.5.0",
     "next": "^14.1.1",
     "next-auth": "^4.24.7",
@@ -30,7 +33,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
+    "@types/node": "^20.12.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
