--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
+    "hardhat-ethernal": "^3.2.5",
     "openzeppelin-solidity": "^4.8.1"
   }
 }
