--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -17,6 +18,7 @@
     "@tanstack/react-query": "^5.28.14",
     "@types/formidable": "^3.4.5",
     "bcrypt": "^5.1.1",
+    "csv-parser": "^3.0.0",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.3",
     "formidable": "^3.5.1",
@@ -43,6 +45,7 @@
     "postcss": "^8",
     "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
