--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["dom", "dom.iterable", "esnext", "ES2022"],
     "allowJs": true,
     "skipLibCheck": true,
+    "target": "ES2022",
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
@@ -10,6 +11,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "outDir": "./dist",
     "jsx": "preserve",
     "incremental": true,
     "plugins": [
@@ -29,7 +31,9 @@
     "app/(models)/User.ts",
     "app/api/auth/[...nextauth]/[...nextauth].ts",
     "app/api/auth/[...nextauth]/route.ts",
-    "app/api/Users/route.ts"
+    "app/api/Users/route.ts",
+    "lib/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "ts-node": { "esm": true, "experimentalSpecifierResolution": "node" }
 }
