--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -6,7 +6,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomiclabs/hardhat-solhint": "^3.0.1",
-    "hardhat": "^2.22.2"
+    "hardhat": "^2.22.2",
+    "hardhat-ethernal": "^3.2.5"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
